Phase3/mini_l.output
Grammar

    0 $accept: program $end

    1 program: functions

    2 functions: functions function
    3          | %empty

    4 function_help: FUNCTION IDENTIFIER

    5 beginparam: BEGINPARAMS

    6 endparam: ENDPARAMS

    7 function: function_help SEMICOLON beginparam dec endparam BEGINLOCALS dec ENDLOCALS BEGINBODY state2help1 ENDBODY

    8 dec: declaration SEMICOLON dec
    9    | %empty

   10 declaration: dec1 COLON dec2

   11 dec1: IDENTIFIER COMMA dec1
   12     | IDENTIFIER

   13 dec2: ARRAY LSQUARE NUMBER RSQUARE OF INTEGER
   14     | INTEGER

   15 statement: statement1
   16          | statement2
   17          | statement3
   18          | statement4
   19          | statement5
   20          | statement6
   21          | statement7
   22          | statement8
   23          | statement9

   24 statement1: IDENTIFIER ASSIGN expression
   25           | IDENTIFIER LSQUARE expression RSQUARE ASSIGN expression

   26 statement2: if_statement state2help1 ENDIF
   27           | else_if_statement state2help1 ENDIF

   28 state2help1: statement SEMICOLON state2help1
   29            | statement SEMICOLON

   30 else_if_statement: if_statement state2help1 ELSE

   31 if_statement: IF bool_exp THEN

   32 statement3: while_start state2help1 ENDLOOP

   33 while_start: while_statement bool_exp BEGINLOOP

   34 while_statement: WHILE

   35 statement4: do_check WHILE bool_exp

   36 do_check: do_while state2help1 ENDLOOP

   37 do_while: DO BEGINLOOP

   38 statement5: foreachstart state2help1 ENDLOOP

   39 foreachstart: foreachstatement forexpr BEGINLOOP

   40 foreachstatement: FOREACH

   41 forexpr: IDENTIFIER IN IDENTIFIER

   42 statement6: READ IDENTIFIER read_variables
   43           | READ IDENTIFIER LSQUARE expression RSQUARE read_variables

   44 read_variables: COMMA IDENTIFIER read_variables
   45               | COMMA IDENTIFIER LSQUARE expression RSQUARE read_variables
   46               | %empty

   47 state6help: COMMA varTerm state6help
   48           | %empty

   49 statement7: WRITE varTerm state6help

   50 statement8: CONTINUE

   51 statement9: RETURN expression

   52 bool_exp: relationHelp
   53         | bool_exp OR relationHelp

   54 relationHelp: relationexpr
   55             | relationHelp AND relationexpr

   56 relationexpr: relationExprHelper
   57             | NOT relationExprHelper

   58 relationExprHelper: comp
   59                   | TRUE
   60                   | FALSE
   61                   | LPAREN bool_exp RPAREN

   62 comp: expression EQ expression
   63     | expression NEQ expression
   64     | expression LT expression
   65     | expression GT expression
   66     | expression LTE expression
   67     | expression GTE expression

   68 expression: multiplicative_expr multExprHelper

   69 multExprHelper: ADD multiplicative_expr multExprHelper
   70               | SUB multiplicative_expr multExprHelper
   71               | %empty

   72 multiplicative_expr: term termHelper

   73 termHelper: MULT term termHelper
   74           | DIV term termHelper
   75           | MOD term termHelper
   76           | %empty

   77 term: identifierTerm
   78     | varTerm
   79     | SUB varTerm

   80 identifierTerm: IDENTIFIER LPAREN identifierHelp RPAREN

   81 identifierHelp: expression COMMA identifierHelp
   82               | expression

   83 varTerm: var
   84        | NUMBER
   85        | LPAREN expression RPAREN

   86 var: IDENTIFIER
   87    | IDENTIFIER LSQUARE expression RSQUARE


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNCTION (258) 4
BEGINPARAMS (259) 5
ENDPARAMS (260) 6
BEGINLOCALS (261) 7
ENDLOCALS (262) 7
BEGINBODY (263) 7
ENDBODY (264) 7
INTEGER (265) 13 14
ARRAY (266) 13
OF (267) 13
IF (268) 31
THEN (269) 31
ENDIF (270) 26 27
ELSE (271) 30
WHILE (272) 34 35
DO (273) 37
FOREACH (274) 40
IN (275) 41
BEGINLOOP (276) 33 37 39
ENDLOOP (277) 32 36 38
CONTINUE (278) 50
READ (279) 42 43
WRITE (280) 49
TRUE (281) 59
FALSE (282) 60
SEMICOLON (283) 7 8 28 29
COLON (284) 10
COMMA (285) 11 44 45 47 81
LPAREN (286) 61 80 85
RPAREN (287) 61 80 85
LSQUARE (288) 13 25 43 45 87
RSQUARE (289) 13 25 43 45 87
ASSIGN (290) 24 25
RETURN (291) 51
NUMBER (292) 13 84
IDENTIFIER (293) 4 11 12 24 25 41 42 43 44 45 80 86 87
MULT (294) 73
DIV (295) 74
MOD (296) 75
ADD (297) 69
SUB (298) 70 79
LT (299) 64
LTE (300) 66
GT (301) 65
GTE (302) 67
EQ (303) 62
NEQ (304) 63
NOT (305) 57
AND (306) 55
OR (307) 53


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
program (54)
    on left: 1, on right: 0
functions (55)
    on left: 2 3, on right: 1 2
function_help (56)
    on left: 4, on right: 7
beginparam (57)
    on left: 5, on right: 7
endparam (58)
    on left: 6, on right: 7
function (59)
    on left: 7, on right: 2
dec (60)
    on left: 8 9, on right: 7 8
declaration (61)
    on left: 10, on right: 8
dec1 (62)
    on left: 11 12, on right: 10 11
dec2 (63)
    on left: 13 14, on right: 10
statement (64)
    on left: 15 16 17 18 19 20 21 22 23, on right: 28 29
statement1 (65)
    on left: 24 25, on right: 15
statement2 (66)
    on left: 26 27, on right: 16
state2help1 (67)
    on left: 28 29, on right: 7 26 27 28 30 32 36 38
else_if_statement (68)
    on left: 30, on right: 27
if_statement (69)
    on left: 31, on right: 26 30
statement3 (70)
    on left: 32, on right: 17
while_start (71)
    on left: 33, on right: 32
while_statement (72)
    on left: 34, on right: 33
statement4 (73)
    on left: 35, on right: 18
do_check (74)
    on left: 36, on right: 35
do_while (75)
    on left: 37, on right: 36
statement5 (76)
    on left: 38, on right: 19
foreachstart (77)
    on left: 39, on right: 38
foreachstatement (78)
    on left: 40, on right: 39
forexpr (79)
    on left: 41, on right: 39
statement6 (80)
    on left: 42 43, on right: 20
read_variables (81)
    on left: 44 45 46, on right: 42 43 44 45
state6help (82)
    on left: 47 48, on right: 47 49
statement7 (83)
    on left: 49, on right: 21
statement8 (84)
    on left: 50, on right: 22
statement9 (85)
    on left: 51, on right: 23
bool_exp (86)
    on left: 52 53, on right: 31 33 35 53 61
relationHelp (87)
    on left: 54 55, on right: 52 53 55
relationexpr (88)
    on left: 56 57, on right: 54 55
relationExprHelper (89)
    on left: 58 59 60 61, on right: 56 57
comp (90)
    on left: 62 63 64 65 66 67, on right: 58
expression (91)
    on left: 68, on right: 24 25 43 45 51 62 63 64 65 66 67 81 82 85
    87
multExprHelper (92)
    on left: 69 70 71, on right: 68 69 70
multiplicative_expr (93)
    on left: 72, on right: 68 69 70
termHelper (94)
    on left: 73 74 75 76, on right: 72 73 74 75
term (95)
    on left: 77 78 79, on right: 72 73 74 75
identifierTerm (96)
    on left: 80, on right: 77
identifierHelp (97)
    on left: 81 82, on right: 80 81
varTerm (98)
    on left: 83 84 85, on right: 47 49 78 79
var (99)
    on left: 86 87, on right: 83


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (functions)

    program    go to state 1
    functions  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: functions .
    2 functions: functions . function

    FUNCTION  shift, and go to state 4

    $default  reduce using rule 1 (program)

    function_help  go to state 5
    function       go to state 6


State 3

    0 $accept: program $end .

    $default  accept


State 4

    4 function_help: FUNCTION . IDENTIFIER

    IDENTIFIER  shift, and go to state 7


State 5

    7 function: function_help . SEMICOLON beginparam dec endparam BEGINLOCALS dec ENDLOCALS BEGINBODY state2help1 ENDBODY

    SEMICOLON  shift, and go to state 8


State 6

    2 functions: functions function .

    $default  reduce using rule 2 (functions)


State 7

    4 function_help: FUNCTION IDENTIFIER .

    $default  reduce using rule 4 (function_help)


State 8

    7 function: function_help SEMICOLON . beginparam dec endparam BEGINLOCALS dec ENDLOCALS BEGINBODY state2help1 ENDBODY

    BEGINPARAMS  shift, and go to state 9

    beginparam  go to state 10


State 9

    5 beginparam: BEGINPARAMS .

    $default  reduce using rule 5 (beginparam)


State 10

    7 function: function_help SEMICOLON beginparam . dec endparam BEGINLOCALS dec ENDLOCALS BEGINBODY state2help1 ENDBODY

    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 9 (dec)

    dec          go to state 12
    declaration  go to state 13
    dec1         go to state 14


State 11

   11 dec1: IDENTIFIER . COMMA dec1
   12     | IDENTIFIER .

    COMMA  shift, and go to state 15

    $default  reduce using rule 12 (dec1)


State 12

    7 function: function_help SEMICOLON beginparam dec . endparam BEGINLOCALS dec ENDLOCALS BEGINBODY state2help1 ENDBODY

    ENDPARAMS  shift, and go to state 16

    endparam  go to state 17


State 13

    8 dec: declaration . SEMICOLON dec

    SEMICOLON  shift, and go to state 18


State 14

   10 declaration: dec1 . COLON dec2

    COLON  shift, and go to state 19


State 15

   11 dec1: IDENTIFIER COMMA . dec1

    IDENTIFIER  shift, and go to state 11

    dec1  go to state 20


State 16

    6 endparam: ENDPARAMS .

    $default  reduce using rule 6 (endparam)


State 17

    7 function: function_help SEMICOLON beginparam dec endparam . BEGINLOCALS dec ENDLOCALS BEGINBODY state2help1 ENDBODY

    BEGINLOCALS  shift, and go to state 21


State 18

    8 dec: declaration SEMICOLON . dec

    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 9 (dec)

    dec          go to state 22
    declaration  go to state 13
    dec1         go to state 14


State 19

   10 declaration: dec1 COLON . dec2

    INTEGER  shift, and go to state 23
    ARRAY    shift, and go to state 24

    dec2  go to state 25


State 20

   11 dec1: IDENTIFIER COMMA dec1 .

    $default  reduce using rule 11 (dec1)


State 21

    7 function: function_help SEMICOLON beginparam dec endparam BEGINLOCALS . dec ENDLOCALS BEGINBODY state2help1 ENDBODY

    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 9 (dec)

    dec          go to state 26
    declaration  go to state 13
    dec1         go to state 14


State 22

    8 dec: declaration SEMICOLON dec .

    $default  reduce using rule 8 (dec)


State 23

   14 dec2: INTEGER .

    $default  reduce using rule 14 (dec2)


State 24

   13 dec2: ARRAY . LSQUARE NUMBER RSQUARE OF INTEGER

    LSQUARE  shift, and go to state 27


State 25

   10 declaration: dec1 COLON dec2 .

    $default  reduce using rule 10 (declaration)


State 26

    7 function: function_help SEMICOLON beginparam dec endparam BEGINLOCALS dec . ENDLOCALS BEGINBODY state2help1 ENDBODY

    ENDLOCALS  shift, and go to state 28


State 27

   13 dec2: ARRAY LSQUARE . NUMBER RSQUARE OF INTEGER

    NUMBER  shift, and go to state 29


State 28

    7 function: function_help SEMICOLON beginparam dec endparam BEGINLOCALS dec ENDLOCALS . BEGINBODY state2help1 ENDBODY

    BEGINBODY  shift, and go to state 30


State 29

   13 dec2: ARRAY LSQUARE NUMBER . RSQUARE OF INTEGER

    RSQUARE  shift, and go to state 31


State 30

    7 function: function_help SEMICOLON beginparam dec endparam BEGINLOCALS dec ENDLOCALS BEGINBODY . state2help1 ENDBODY

    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    DO          shift, and go to state 34
    FOREACH     shift, and go to state 35
    CONTINUE    shift, and go to state 36
    READ        shift, and go to state 37
    WRITE       shift, and go to state 38
    RETURN      shift, and go to state 39
    IDENTIFIER  shift, and go to state 40

    statement          go to state 41
    statement1         go to state 42
    statement2         go to state 43
    state2help1        go to state 44
    else_if_statement  go to state 45
    if_statement       go to state 46
    statement3         go to state 47
    while_start        go to state 48
    while_statement    go to state 49
    statement4         go to state 50
    do_check           go to state 51
    do_while           go to state 52
    statement5         go to state 53
    foreachstart       go to state 54
    foreachstatement   go to state 55
    statement6         go to state 56
    statement7         go to state 57
    statement8         go to state 58
    statement9         go to state 59


State 31

   13 dec2: ARRAY LSQUARE NUMBER RSQUARE . OF INTEGER

    OF  shift, and go to state 60


State 32

   31 if_statement: IF . bool_exp THEN

    TRUE        shift, and go to state 61
    FALSE       shift, and go to state 62
    LPAREN      shift, and go to state 63
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66
    NOT         shift, and go to state 67

    bool_exp             go to state 68
    relationHelp         go to state 69
    relationexpr         go to state 70
    relationExprHelper   go to state 71
    comp                 go to state 72
    expression           go to state 73
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 33

   34 while_statement: WHILE .

    $default  reduce using rule 34 (while_statement)


State 34

   37 do_while: DO . BEGINLOOP

    BEGINLOOP  shift, and go to state 79


State 35

   40 foreachstatement: FOREACH .

    $default  reduce using rule 40 (foreachstatement)


State 36

   50 statement8: CONTINUE .

    $default  reduce using rule 50 (statement8)


State 37

   42 statement6: READ . IDENTIFIER read_variables
   43           | READ . IDENTIFIER LSQUARE expression RSQUARE read_variables

    IDENTIFIER  shift, and go to state 80


State 38

   49 statement7: WRITE . varTerm state6help

    LPAREN      shift, and go to state 81
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 82

    varTerm  go to state 83
    var      go to state 78


State 39

   51 statement9: RETURN . expression

    LPAREN      shift, and go to state 81
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66

    expression           go to state 84
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 40

   24 statement1: IDENTIFIER . ASSIGN expression
   25           | IDENTIFIER . LSQUARE expression RSQUARE ASSIGN expression

    LSQUARE  shift, and go to state 85
    ASSIGN   shift, and go to state 86


State 41

   28 state2help1: statement . SEMICOLON state2help1
   29            | statement . SEMICOLON

    SEMICOLON  shift, and go to state 87


State 42

   15 statement: statement1 .

    $default  reduce using rule 15 (statement)


State 43

   16 statement: statement2 .

    $default  reduce using rule 16 (statement)


State 44

    7 function: function_help SEMICOLON beginparam dec endparam BEGINLOCALS dec ENDLOCALS BEGINBODY state2help1 . ENDBODY

    ENDBODY  shift, and go to state 88


State 45

   27 statement2: else_if_statement . state2help1 ENDIF

    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    DO          shift, and go to state 34
    FOREACH     shift, and go to state 35
    CONTINUE    shift, and go to state 36
    READ        shift, and go to state 37
    WRITE       shift, and go to state 38
    RETURN      shift, and go to state 39
    IDENTIFIER  shift, and go to state 40

    statement          go to state 41
    statement1         go to state 42
    statement2         go to state 43
    state2help1        go to state 89
    else_if_statement  go to state 45
    if_statement       go to state 46
    statement3         go to state 47
    while_start        go to state 48
    while_statement    go to state 49
    statement4         go to state 50
    do_check           go to state 51
    do_while           go to state 52
    statement5         go to state 53
    foreachstart       go to state 54
    foreachstatement   go to state 55
    statement6         go to state 56
    statement7         go to state 57
    statement8         go to state 58
    statement9         go to state 59


State 46

   26 statement2: if_statement . state2help1 ENDIF
   30 else_if_statement: if_statement . state2help1 ELSE

    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    DO          shift, and go to state 34
    FOREACH     shift, and go to state 35
    CONTINUE    shift, and go to state 36
    READ        shift, and go to state 37
    WRITE       shift, and go to state 38
    RETURN      shift, and go to state 39
    IDENTIFIER  shift, and go to state 40

    statement          go to state 41
    statement1         go to state 42
    statement2         go to state 43
    state2help1        go to state 90
    else_if_statement  go to state 45
    if_statement       go to state 46
    statement3         go to state 47
    while_start        go to state 48
    while_statement    go to state 49
    statement4         go to state 50
    do_check           go to state 51
    do_while           go to state 52
    statement5         go to state 53
    foreachstart       go to state 54
    foreachstatement   go to state 55
    statement6         go to state 56
    statement7         go to state 57
    statement8         go to state 58
    statement9         go to state 59


State 47

   17 statement: statement3 .

    $default  reduce using rule 17 (statement)


State 48

   32 statement3: while_start . state2help1 ENDLOOP

    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    DO          shift, and go to state 34
    FOREACH     shift, and go to state 35
    CONTINUE    shift, and go to state 36
    READ        shift, and go to state 37
    WRITE       shift, and go to state 38
    RETURN      shift, and go to state 39
    IDENTIFIER  shift, and go to state 40

    statement          go to state 41
    statement1         go to state 42
    statement2         go to state 43
    state2help1        go to state 91
    else_if_statement  go to state 45
    if_statement       go to state 46
    statement3         go to state 47
    while_start        go to state 48
    while_statement    go to state 49
    statement4         go to state 50
    do_check           go to state 51
    do_while           go to state 52
    statement5         go to state 53
    foreachstart       go to state 54
    foreachstatement   go to state 55
    statement6         go to state 56
    statement7         go to state 57
    statement8         go to state 58
    statement9         go to state 59


State 49

   33 while_start: while_statement . bool_exp BEGINLOOP

    TRUE        shift, and go to state 61
    FALSE       shift, and go to state 62
    LPAREN      shift, and go to state 63
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66
    NOT         shift, and go to state 67

    bool_exp             go to state 92
    relationHelp         go to state 69
    relationexpr         go to state 70
    relationExprHelper   go to state 71
    comp                 go to state 72
    expression           go to state 73
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 50

   18 statement: statement4 .

    $default  reduce using rule 18 (statement)


State 51

   35 statement4: do_check . WHILE bool_exp

    WHILE  shift, and go to state 93


State 52

   36 do_check: do_while . state2help1 ENDLOOP

    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    DO          shift, and go to state 34
    FOREACH     shift, and go to state 35
    CONTINUE    shift, and go to state 36
    READ        shift, and go to state 37
    WRITE       shift, and go to state 38
    RETURN      shift, and go to state 39
    IDENTIFIER  shift, and go to state 40

    statement          go to state 41
    statement1         go to state 42
    statement2         go to state 43
    state2help1        go to state 94
    else_if_statement  go to state 45
    if_statement       go to state 46
    statement3         go to state 47
    while_start        go to state 48
    while_statement    go to state 49
    statement4         go to state 50
    do_check           go to state 51
    do_while           go to state 52
    statement5         go to state 53
    foreachstart       go to state 54
    foreachstatement   go to state 55
    statement6         go to state 56
    statement7         go to state 57
    statement8         go to state 58
    statement9         go to state 59


State 53

   19 statement: statement5 .

    $default  reduce using rule 19 (statement)


State 54

   38 statement5: foreachstart . state2help1 ENDLOOP

    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    DO          shift, and go to state 34
    FOREACH     shift, and go to state 35
    CONTINUE    shift, and go to state 36
    READ        shift, and go to state 37
    WRITE       shift, and go to state 38
    RETURN      shift, and go to state 39
    IDENTIFIER  shift, and go to state 40

    statement          go to state 41
    statement1         go to state 42
    statement2         go to state 43
    state2help1        go to state 95
    else_if_statement  go to state 45
    if_statement       go to state 46
    statement3         go to state 47
    while_start        go to state 48
    while_statement    go to state 49
    statement4         go to state 50
    do_check           go to state 51
    do_while           go to state 52
    statement5         go to state 53
    foreachstart       go to state 54
    foreachstatement   go to state 55
    statement6         go to state 56
    statement7         go to state 57
    statement8         go to state 58
    statement9         go to state 59


State 55

   39 foreachstart: foreachstatement . forexpr BEGINLOOP

    IDENTIFIER  shift, and go to state 96

    forexpr  go to state 97


State 56

   20 statement: statement6 .

    $default  reduce using rule 20 (statement)


State 57

   21 statement: statement7 .

    $default  reduce using rule 21 (statement)


State 58

   22 statement: statement8 .

    $default  reduce using rule 22 (statement)


State 59

   23 statement: statement9 .

    $default  reduce using rule 23 (statement)


State 60

   13 dec2: ARRAY LSQUARE NUMBER RSQUARE OF . INTEGER

    INTEGER  shift, and go to state 98


State 61

   59 relationExprHelper: TRUE .

    $default  reduce using rule 59 (relationExprHelper)


State 62

   60 relationExprHelper: FALSE .

    $default  reduce using rule 60 (relationExprHelper)


State 63

   61 relationExprHelper: LPAREN . bool_exp RPAREN
   85 varTerm: LPAREN . expression RPAREN

    TRUE        shift, and go to state 61
    FALSE       shift, and go to state 62
    LPAREN      shift, and go to state 63
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66
    NOT         shift, and go to state 67

    bool_exp             go to state 99
    relationHelp         go to state 69
    relationexpr         go to state 70
    relationExprHelper   go to state 71
    comp                 go to state 72
    expression           go to state 100
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 64

   84 varTerm: NUMBER .

    $default  reduce using rule 84 (varTerm)


State 65

   80 identifierTerm: IDENTIFIER . LPAREN identifierHelp RPAREN
   86 var: IDENTIFIER .
   87    | IDENTIFIER . LSQUARE expression RSQUARE

    LPAREN   shift, and go to state 101
    LSQUARE  shift, and go to state 102

    $default  reduce using rule 86 (var)


State 66

   79 term: SUB . varTerm

    LPAREN      shift, and go to state 81
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 82

    varTerm  go to state 103
    var      go to state 78


State 67

   57 relationexpr: NOT . relationExprHelper

    TRUE        shift, and go to state 61
    FALSE       shift, and go to state 62
    LPAREN      shift, and go to state 63
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66

    relationExprHelper   go to state 104
    comp                 go to state 72
    expression           go to state 73
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 68

   31 if_statement: IF bool_exp . THEN
   53 bool_exp: bool_exp . OR relationHelp

    THEN  shift, and go to state 105
    OR    shift, and go to state 106


State 69

   52 bool_exp: relationHelp .
   55 relationHelp: relationHelp . AND relationexpr

    AND  shift, and go to state 107

    $default  reduce using rule 52 (bool_exp)


State 70

   54 relationHelp: relationexpr .

    $default  reduce using rule 54 (relationHelp)


State 71

   56 relationexpr: relationExprHelper .

    $default  reduce using rule 56 (relationexpr)


State 72

   58 relationExprHelper: comp .

    $default  reduce using rule 58 (relationExprHelper)


State 73

   62 comp: expression . EQ expression
   63     | expression . NEQ expression
   64     | expression . LT expression
   65     | expression . GT expression
   66     | expression . LTE expression
   67     | expression . GTE expression

    LT   shift, and go to state 108
    LTE  shift, and go to state 109
    GT   shift, and go to state 110
    GTE  shift, and go to state 111
    EQ   shift, and go to state 112
    NEQ  shift, and go to state 113


State 74

   68 expression: multiplicative_expr . multExprHelper

    ADD  shift, and go to state 114
    SUB  shift, and go to state 115

    $default  reduce using rule 71 (multExprHelper)

    multExprHelper  go to state 116


State 75

   72 multiplicative_expr: term . termHelper

    MULT  shift, and go to state 117
    DIV   shift, and go to state 118
    MOD   shift, and go to state 119

    $default  reduce using rule 76 (termHelper)

    termHelper  go to state 120


State 76

   77 term: identifierTerm .

    $default  reduce using rule 77 (term)


State 77

   78 term: varTerm .

    $default  reduce using rule 78 (term)


State 78

   83 varTerm: var .

    $default  reduce using rule 83 (varTerm)


State 79

   37 do_while: DO BEGINLOOP .

    $default  reduce using rule 37 (do_while)


State 80

   42 statement6: READ IDENTIFIER . read_variables
   43           | READ IDENTIFIER . LSQUARE expression RSQUARE read_variables

    COMMA    shift, and go to state 121
    LSQUARE  shift, and go to state 122

    $default  reduce using rule 46 (read_variables)

    read_variables  go to state 123


State 81

   85 varTerm: LPAREN . expression RPAREN

    LPAREN      shift, and go to state 81
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66

    expression           go to state 124
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 82

   86 var: IDENTIFIER .
   87    | IDENTIFIER . LSQUARE expression RSQUARE

    LSQUARE  shift, and go to state 102

    $default  reduce using rule 86 (var)


State 83

   49 statement7: WRITE varTerm . state6help

    COMMA  shift, and go to state 125

    $default  reduce using rule 48 (state6help)

    state6help  go to state 126


State 84

   51 statement9: RETURN expression .

    $default  reduce using rule 51 (statement9)


State 85

   25 statement1: IDENTIFIER LSQUARE . expression RSQUARE ASSIGN expression

    LPAREN      shift, and go to state 81
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66

    expression           go to state 127
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 86

   24 statement1: IDENTIFIER ASSIGN . expression

    LPAREN      shift, and go to state 81
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66

    expression           go to state 128
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 87

   28 state2help1: statement SEMICOLON . state2help1
   29            | statement SEMICOLON .

    IF          shift, and go to state 32
    WHILE       shift, and go to state 33
    DO          shift, and go to state 34
    FOREACH     shift, and go to state 35
    CONTINUE    shift, and go to state 36
    READ        shift, and go to state 37
    WRITE       shift, and go to state 38
    RETURN      shift, and go to state 39
    IDENTIFIER  shift, and go to state 40

    $default  reduce using rule 29 (state2help1)

    statement          go to state 41
    statement1         go to state 42
    statement2         go to state 43
    state2help1        go to state 129
    else_if_statement  go to state 45
    if_statement       go to state 46
    statement3         go to state 47
    while_start        go to state 48
    while_statement    go to state 49
    statement4         go to state 50
    do_check           go to state 51
    do_while           go to state 52
    statement5         go to state 53
    foreachstart       go to state 54
    foreachstatement   go to state 55
    statement6         go to state 56
    statement7         go to state 57
    statement8         go to state 58
    statement9         go to state 59


State 88

    7 function: function_help SEMICOLON beginparam dec endparam BEGINLOCALS dec ENDLOCALS BEGINBODY state2help1 ENDBODY .

    $default  reduce using rule 7 (function)


State 89

   27 statement2: else_if_statement state2help1 . ENDIF

    ENDIF  shift, and go to state 130


State 90

   26 statement2: if_statement state2help1 . ENDIF
   30 else_if_statement: if_statement state2help1 . ELSE

    ENDIF  shift, and go to state 131
    ELSE   shift, and go to state 132


State 91

   32 statement3: while_start state2help1 . ENDLOOP

    ENDLOOP  shift, and go to state 133


State 92

   33 while_start: while_statement bool_exp . BEGINLOOP
   53 bool_exp: bool_exp . OR relationHelp

    BEGINLOOP  shift, and go to state 134
    OR         shift, and go to state 106


State 93

   35 statement4: do_check WHILE . bool_exp

    TRUE        shift, and go to state 61
    FALSE       shift, and go to state 62
    LPAREN      shift, and go to state 63
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66
    NOT         shift, and go to state 67

    bool_exp             go to state 135
    relationHelp         go to state 69
    relationexpr         go to state 70
    relationExprHelper   go to state 71
    comp                 go to state 72
    expression           go to state 73
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 94

   36 do_check: do_while state2help1 . ENDLOOP

    ENDLOOP  shift, and go to state 136


State 95

   38 statement5: foreachstart state2help1 . ENDLOOP

    ENDLOOP  shift, and go to state 137


State 96

   41 forexpr: IDENTIFIER . IN IDENTIFIER

    IN  shift, and go to state 138


State 97

   39 foreachstart: foreachstatement forexpr . BEGINLOOP

    BEGINLOOP  shift, and go to state 139


State 98

   13 dec2: ARRAY LSQUARE NUMBER RSQUARE OF INTEGER .

    $default  reduce using rule 13 (dec2)


State 99

   53 bool_exp: bool_exp . OR relationHelp
   61 relationExprHelper: LPAREN bool_exp . RPAREN

    RPAREN  shift, and go to state 140
    OR      shift, and go to state 106


State 100

   62 comp: expression . EQ expression
   63     | expression . NEQ expression
   64     | expression . LT expression
   65     | expression . GT expression
   66     | expression . LTE expression
   67     | expression . GTE expression
   85 varTerm: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 141
    LT      shift, and go to state 108
    LTE     shift, and go to state 109
    GT      shift, and go to state 110
    GTE     shift, and go to state 111
    EQ      shift, and go to state 112
    NEQ     shift, and go to state 113


State 101

   80 identifierTerm: IDENTIFIER LPAREN . identifierHelp RPAREN

    LPAREN      shift, and go to state 81
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66

    expression           go to state 142
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    identifierHelp       go to state 143
    varTerm              go to state 77
    var                  go to state 78


State 102

   87 var: IDENTIFIER LSQUARE . expression RSQUARE

    LPAREN      shift, and go to state 81
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66

    expression           go to state 144
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 103

   79 term: SUB varTerm .

    $default  reduce using rule 79 (term)


State 104

   57 relationexpr: NOT relationExprHelper .

    $default  reduce using rule 57 (relationexpr)


State 105

   31 if_statement: IF bool_exp THEN .

    $default  reduce using rule 31 (if_statement)


State 106

   53 bool_exp: bool_exp OR . relationHelp

    TRUE        shift, and go to state 61
    FALSE       shift, and go to state 62
    LPAREN      shift, and go to state 63
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66
    NOT         shift, and go to state 67

    relationHelp         go to state 145
    relationexpr         go to state 70
    relationExprHelper   go to state 71
    comp                 go to state 72
    expression           go to state 73
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 107

   55 relationHelp: relationHelp AND . relationexpr

    TRUE        shift, and go to state 61
    FALSE       shift, and go to state 62
    LPAREN      shift, and go to state 63
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66
    NOT         shift, and go to state 67

    relationexpr         go to state 146
    relationExprHelper   go to state 71
    comp                 go to state 72
    expression           go to state 73
    multiplicative_expr  go to state 74
    term                 go to state 75
    identifierTerm       go to state 76
    varTerm              go to state 77
    var                  go to state 78


State 108

   64 comp: expression LT . expression

    LPAREN      shift, and go to state 81
    NUMBER      shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    SUB         shift, and go to state 66
